# clickmart

./: abstract.md  service_description.txt
infrastructure/: .env.example  .gitignore  Makefile  docker-compose.yml  local-docker-compose.yml
infrastructure/nginx/configs/: site.conf
orders/: .env.example  .gitignore  Makefile  alembic.ini  pyproject.toml
orders/src/: main.py
orders/src/application/: exceptions.py
orders/src/application/dto/: __init__.py  order.py  order_item.py
orders/src/application/uow/: __init__.py  base.py
orders/src/application/use_cases/: __init__.py  create_order.py
orders/src/domain/: exceptions.py
orders/src/domain/entities/: __init__.py  order.py  order_item.py  product.py  stock.py
orders/src/domain/interfaces/: __init__.py  order.py  session.py  stock.py
orders/src/domain/repositories/: __init__.py  base.py  order.py  stock.py
orders/src/domain/uow/: __init__.py  base.py
orders/src/domain/value_objects/: __init__.py  money.py  order_number.py  sku.py
orders/src/infrastructure/: ioc.py
orders/src/infrastructure/alembic/: env.py
orders/src/infrastructure/alembic/versions/: 2025.02.23T23:40-5f192388fca5_initial_migration.py
orders/src/infrastructure/configs/: api.py  base.py  cors.py
orders/src/infrastructure/db/sqlalchemy/: session.py
orders/src/infrastructure/db/sqlalchemy/models/: __init__.py  orders.py  products.py  stocks.py
orders/src/infrastructure/litestar/: __init__.py  setup.py
orders/src/infrastructure/repositories/: __init__.py
orders/src/infrastructure/repositories/in_memory/: __init__.py  order.py  stock.py
orders/src/infrastructure/repositories/sqlalchemy/: __init__.py  order.py
orders/src/infrastructure/settings/: __init__.py  api.py  base.py  cors.py  postgresql.py
orders/src/infrastructure/sqlalchemy/: session.py
orders/src/infrastructure/sqlalchemy/models/: __init__.py  base.py  order_items.py  orders.py  products.py  stocks.py
orders/src/infrastructure/sqlalchemy/repositories/: __init__.py  order.py  stock.py
orders/src/infrastructure/uow/: in_memory.py
orders/src/presentation/api/v1/: __init__.py  router.py
orders/src/presentation/api/v1/routers/: __init__.py  order.py
orders/src/presentation/api/v1/schemas/: __init__.py  order.py
orders/tests/: conftest.py
orders/tests/e2e/: fixtures.py
orders/tests/integration/: fixtures.py
orders/tests/unit/: fixtures.py
orders/tests/unit/domain/entities/: test_stock.py
orders/tests/unit/domain/value_objects/: test_money.py
